--- a/presentation.tex
+++ b/presentation.tex
@@ -22,7 +22,7 @@
 % Logo in the first page, comment out if don't wanted
 \presentationlogo{\includegraphics[width=2cm]{logo/fsu-logo.png}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[A short version of the title goes here]{Mathematical Foundations of Spectral Graph Theory.}
+\title[A short version of the title goes here]{Mathematical Foundations of Spectral Graph Theory }
 \author[Newton]{Issac Newton}
 \institute{Florida State University}
 \date{\today}
